# pitch-detection

./: .env  .gitignore  Cargo.toml  PERFORMANCE_FINDINGS.md  README.md  docker-compose.yml  index.html  nginx.conf
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  style.css  vite.config.js
frontend/src/: App.vue
frontend/src/audio/: audioManager.js
frontend/src/components/: MicrophoneSetup.vue  PianoRoll.vue  PitchVisualizer.vue
frontend/src/composables/: useNoteSegmentation.js  useWebRTC.js
public/: yin-processor.js
src/: App.vue  lib.rs
src/audio/: audioManager.js
src/components/: PianoRoll.vue
src/composables/: useNoteSegmentation.js
src/utils/: noteUtils.js
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
